# eos_workflow

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/eos_workflow/: __init__.py  acwf_response.py  auto.py  cli.py  convergency.py  delta_metric.py  eos_inspect.py  eos_plotly.py  eos_workflow.py  inspect.py  method.py  phonon_convergency_workflow.py  sets.py  utilities.py  workflows.py
src/eos_workflow/statics/AE_EOS/: WIEN2K_GS.json  (+7 more)
src/tests/: Al_precision.html  Ce-FCC-energy-convergency-abs_error.html  Eu-4f-o1.out  Eu-Diamond-convergency-data.csv  Eu-illustration.json  Ir-eos_fitting_results.csv  Ir-eos_fitting_results_2.csv  Ir-exc.csv  La-FCC-energy-convergency-abs_error.html  LnN.py  XO2_precision_summary.json  XO_precision_summary.json  bands.py  converge_tests.py  convergency_analyse.py  convergency_plot.py  debug.py  delta1_convergence.py  environment.yml  eos_converge_results.json  eos_fitting_results.json  eos_heatmap.py  eos_summarize.py  eos_workflow.yaml  hints.py  hints.txt  hints_analyse.py  illus.py  illustration.py  jfremote_out.json  locally_stable.yaml  logder_difference.py  output_precision_summary.json  pdos.py  phonon.txt  phonon_test.py  plot_etot_convergency.py  plot_test.py  plotly.py  queue.out  (+10 more)
src/tests/job_2024-09-18-15-42-17-045999-11110/: abinit_input.json  run.abi  run.abo
test_env/: pyvenv.cfg
tests/: __init__.py  test_eos_workflow.py
(+777 files in other folders)
